bk_ida/gccida/c3/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9077:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9087:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9087:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rcx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9090:1: error: use of undeclared identifier 'induction_1'
induction_1 *v25; // r15 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9090:14: error: use of undeclared identifier 'v25'
induction_1 *v25; // r15 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9092:4: error: expected ';' after expression
rtx mult_val; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9092:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9094:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9094:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9095:4: error: expected ';' after expression
rtx add_val; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9095:5: error: use of undeclared identifier 'add_val'
rtx add_val; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9096:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // r8 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9096:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // r8 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9098:4: error: expected ';' after expression
rtx v33; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9098:5: error: use of undeclared identifier 'v33'
rtx v33; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9103:4: error: expected ';' after expression
rtx v38; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9103:5: error: use of undeclared identifier 'v38'
rtx v38; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9104:4: error: expected ';' after expression
rtx v39; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/loop.c:9104:5: error: use of undeclared identifier 'v39'
rtx v39; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
